--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ install:
   - md C:\nc
   - npm install -g npm@^2
   # hide python so node-gyp won't try to build native extentions
-  - rename C:\Python27 Python27hidden
+  # rename C:\Python27 Python27hidden
   # Workaround https://github.com/npm/npm/wiki/Troubleshooting#upgrading-on-windows
   - set PATH=%APPDATA%\npm;%PATH%
   - npm config set cache C:\nc
