start on coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,7 @@ install:
   - git --version
   - npm install
 
+after_script:
+  - cat coverage/lcov.info | codeclimate
+  - cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js
+
